Admin Features: Fix column alignment

--- a/common/css/admin.css
+++ b/common/css/admin.css
@@ -482,7 +482,7 @@ table#akmin tr td input[type=checkbox] {
 
 
 table#akmin .pp-capability-menus-select .restrict-column {
-  width: 70px !important;
+  min-width: 90px;
   text-align: center;
   display: table-cell !important;
   clear: none !important;
@@ -577,7 +577,7 @@ margin-bottom: 10px !important;
 }
 
 .pp-capability-menus-wrapper .features-section-header {
-  padding-left: 35px !important;
+  padding-left: 10px !important;
 }
 
 /* Filters */
